--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="mainContent__cards">
                
-                <article class="card">
+                <!-- <article class="card">
                     <header class="card__header">
                         <h2>#1</h2>
                         <h3>Bulbasaur</h3>
@@ -104,7 +104,6 @@
                         </div>
                         <p>65</p>
                     </div>
-
                 </article>
 
                 <article class="card">
@@ -153,12 +152,12 @@
                         <div class="card__stat__container">
                             <div class="stat specialDefense"></div>
                         </div>
-                        <p>65</p>
+                        <p>65</p> -->
                     </div>
                 </article>
             </div>
         </section>
     </main>
-    <script src="./js/src.js"></script>
+    <script src="./js/src.js" type="module"></script>
 </body>
 </html>
